# simxiv

./: .travis.yml  Cargo.toml
engine/: Cargo.toml
engine/src/: lib.rs
prelude/: Cargo.toml
prelude/src/: action.rs  aura.rs  damage.rs  effect.rs  entity.rs  lib.rs
spell_data/: Cargo.toml
spell_data/src/: embed_spelldata.rs  lib.rs  util.rs  xiv_csv.rs
spell_data/tests/: action.csv  load.rs  macro.rs
