[package]
name = "simxiv_engine"
version = "0.1.0"
authors = ["Seb Renauld <seb.renauld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simxiv_prelude = { path = "../prelude" }
uuid = { version = "*", features = ["v4"] }