[package]
name = "simxiv_spelldata"
version = "0.1.0"
authors = ["Seb Renauld <seb.renauld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "0.4"
syn = { version = "0.15", features = ["extra-traits"] }
quote = "0.6"
csv = "1"
lazy_static = "*" 
simxiv_prelude = { path = "../prelude" }

[lib]
proc-macro = true