[package]
authors = ["Seb Renauld <seb.renauld@gmail.com>", "J David Smith <emallson@atlanis.net>"]
edition = "2018"
name = "simxiv_spelldata"
version = "0.1.0"
[dependencies]
csv = "1"
lazy_static = "*"
serde = "*"
serde_derive = "*"
serde_repr = "*"

[dependencies.simxiv_prelude]
path = "../prelude"
